--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="/CSS/style.css">
     
     <title> Cancel Plan Model | UI Design Daily</title>
-
 </head>
 <body>
     <main>
@@ -27,32 +26,32 @@
             <h4 class="cancel-question">Why are you cancelling your plan?</h4>
             <form action="#">
                 <div>
-                    <label for="difficult" class="input-cost-container">The software is too difficult to use.
-                        <input type="checkbox" name="difficult">
+                    <label class="input-cost-container">The software is too difficult to use.
+                        <input type="checkbox">
                         <span class="checkmark"></span>
                     </label>
                 </div>
                 <div>
-                    <label for="features"  class="input-cost-container">Features I need are missing.
-                        <input type="checkbox" name="features">
+                    <label class="input-cost-container">Features I need are missing.
+                        <input type="checkbox">
                         <span class="checkmark"></span>
                     </label>
                 </div>
                 <div>
-                    <label for="expensive" class="input-cost-container">Too expensive.
-                        <input type="checkbox" name="expensive">
+                    <label class="input-cost-container">Too expensive.
+                        <input type="checkbox">
                         <span class="checkmark"></span>
                     </label>
                 </div>
                 <div>
-                    <label for="done" class="input-cost-container">I am done with this project.
-                        <input type="checkbox" name="done" checked>
+                    <label class="input-cost-container">I am done with this project.
+                        <input type="checkbox" checked>
                         <span class="checkmark"></span>
                     </label>
                 </div>
                 <div>
-                    <label for="different" class="input-cost-container">I am using a different software now.
-                        <input type="checkbox" name="different">
+                    <label class="input-cost-container">I am using a different software now.
+                        <input type="checkbox">
                         <span class="checkmark"></span>
                     </label>
                 </div>
@@ -67,9 +66,7 @@
                 <a href="#" class="never-mind">Never mind</a>
             </div>
         </div>
-
     </main>
-
 
     <!-- ION-ICONS -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
